--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,23 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@font-face {
+  font-family: "GoogleSans";
+  src: url("/fonts/GoogleSans-VariableFont_GRAD\,opsz\,wght.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
+  font-family: "GoogleSans";
+  src: url("/fonts/GoogleSans-Italic-VariableFont_GRAD\,opsz\,wght.ttf") format("truetype");
+  font-style: italic;
+  font-weight: normal;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --default-font-family: "GoogleSans";
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
